[tool.poetry]
name = "benchsanic"
version = "0.1.0"
description = ""
authors = ["bitbloxhub <45184892+bitbloxhub@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sanic = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
